--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "json3": "^3.3.0",
-    "es5-shim": "^4.0.0",
-    "bootstrap": "^3.2.0"
+    "angular-local-storage":"latest",
+    "bootstrap": "^3.2.0",
+    "fontawesome":"latest"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
