--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "karma-chrome-launcher": "^0.1.7",
     "karma-jasmine": "~0.3.2",
     "karma-phantomjs-launcher": "~0.1.4",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-firefox-launcher": "^0.1.1",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
   },
