--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "angular": "^1.3.0",
     "angular-local-storage":"latest",
+    "angular-route":"latest",
     "bootstrap": "^3.2.0",
     "fontawesome":"latest"
   },
